# mail-cli

./: Cargo.toml  README.md
skills/mail-skill/: SKILL.md
src/: cli.rs  contacts.rs  credentials.rs  error.rs  html.rs  main.rs
src/backend/: async_imap_fetch.rs  convert.rs  mod.rs
src/commands/: account.rs  agent_info.rs  attachment.rs  config.rs  contact.rs  message.rs  mod.rs
src/config/: account.rs  mod.rs
src/output/: envelope.rs  error.rs  message.rs  mod.rs
src/safety/: allowlist.rs  delete_gate.rs  mod.rs
tests/: smoke.rs
